# spotify-fun

./: README.md  pyproject.toml
TODO_Notes/: 4-10-25_TODO.txt  implement_auth.txt  use_case.txt
app/: main.py
app/authentication/: auth.py
app/playback/: audioplayer.py  device_info.py  play_recent.py
audio_player/: __main__.py  debug.py  main.py
audio_player/authentication/: auth.py
audio_player/controllers/: command_menu.py
audio_player/playback/: audio_playback_manager.py  play.py  play_recent.py  song.py  song_name_to_url.txt  uri_manager.py
auth/: implement_auth.txt
