[tool.poetry]
name = "spotify-fun"
version = "0.0.0"
description = "A fun project to interact with Spotify through spotipy"
authors = ["Ryan <ryan.welch001@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.25.1"
spotipy = "^2.19.0"
python-dotenv = "^1.1.0"

[[tool.poetry.packages]]
include = "app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

